--- a/public/dev.html
+++ b/public/dev.html
@@ -237,7 +237,7 @@
   </body>
 
   <script
-    src="/static/cdn_libraries/cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+    src="/static/cdn_libraries/cdn.jsdelivr.net/npm/jquery@3.3.1/dists/jquery.min.js"></script>
   <script
     src="/static/cdn_libraries/cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script
@@ -257,7 +257,7 @@
 
   <!-- <script src="http://10.240.187.174:8000/_d/js"></script> -->
   <script
-    src="/static/cdn_libraries/cdn.jsdelivr.net/npm/jstree@3.3.8/dist/jstree.min.js"></script>
+    src="/static/cdn_libraries/cdn.jsdelivr.net/npm/jstree@3.3.8/dists/jstree.min.js"></script>
 
   <script src="/static/libs/vue-2.5.16/vue.js"></script>
 
